# Process-Injection

./: .gitignore  README.md
DLL/: injectDll.c
NTShellExec/: CMakeLists.txt  README.md
NTShellExec/include/: utils.h
NTShellExec/src/: NTShellExec.c
ShellExec/: CMakeLists.txt  README.md  shellExec.c
ShellExec/src/: main.c
