# Spécifie la version minimale de CMake requise
cmake_minimum_required(VERSION 3.5)

# Nomme votre projet et spécifie le langage C
project(ShellExec)

# include files
include_directories(include)

# src files
set(SOURCES
    src/main.c
)

add_executable(shellexec ${SOURCES})

# Exemple : Activer les avertissements et activer le standard C11
target_compile_options(shellexec PRIVATE -Wall -std=c11)
